--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.6",
     "date-fns": "^3.6.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
-    "react-big-calendar": "^0.33.6",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
