--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.6",
+
+    "@types/googlemaps" : "^3.0.0",
+    "@types/markerclustererplus" : "^2.1.29",
+    "@types/react" : "^16.9.0",
+    "react-google-maps": "^9.4.5",
+    
+    "axios": "^1.7.3",
     "date-fns": "^3.6.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
