--- a/package.json
+++ b/package.json
@@ -12,12 +12,9 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.6",
-
-    "@types/googlemaps" : "^3.0.0",
-    "@types/markerclustererplus" : "^2.1.29",
-    "@types/react" : "^16.9.0",
-    "react-google-maps": "^9.4.5",
-    
+    "@types/googlemaps": "^3.0.0",
+    "@types/markerclustererplus": "^2.1.29",
+    "@types/react": "^18.3.3",
     "axios": "^1.7.3",
     "date-fns": "^3.6.0",
     "moment": "^2.30.1",
@@ -26,6 +23,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "^5.0.1",
+    "styled-components": "^6.1.12",
     "web-vitals": "^4.2.2",
     "webpack": "^5.93.0"
   },
